--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
                 sudo apt-get install -y opencl-headers
 
             - name: Configure and build on macOS
-              if: matrix.os == 'macos-latest'
+              if: matrix.os == 'macos-latest' || matrix.os == 'macos-13'
               run: |
                 ./configure --enable-opencl
                 make -j$(sysctl -n hw.ncpu)
