--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,6 +72,8 @@ jobs:
               id: getdate
               run: echo "::set-output name=getdate::$(date +'%Y.%m.%d-%H%M')"
               
+            - uses: actions/checkout@v4
+
             - name: Download artifacts
               uses: actions/download-artifact@v4
 
